--- a/package.json
+++ b/package.json
@@ -13,16 +13,17 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/drawer": "^7.3.9",
     "@react-navigation/native": "^7.1.6",
-    "@react-navigation/native-stack": "^7.3.10",
+    "@react-navigation/native-stack": "^7.3.12",
     "@react-navigation/stack": "^7.2.10",
     "expo": "~52.0.43",
     "expo-router": "^4.0.20",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.7.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-bottom-navigation": "^0.7.6",
     "react-native-gesture-handler": "~2.20.2",
-    "react-native-paper": "^5.13.2",
+    "react-native-paper": "^5.14.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.14.1",
     "react-native-screens": "~4.4.0",
